Fix jumping buttons

--- a/src/Components/Menu/Card.sass
+++ b/src/Components/Menu/Card.sass
@@ -4,6 +4,7 @@
     color: #252525
     padding: 20px 0 30px
     text-align: center
+    min-height: 98px
 
 .card__img
     position: relative
